2006-03-30  Don Allingham  <don@gramps-project.org>
	* src/Mime/_GnomeMime.py: filter out bad KDE mime type commands
	* src/Utils.py: clean up launch routine

2006-03-29  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/Sort.py: remove use of deprecated functions
	* src/BaseDoc.py: remove use of deprecated functions
	* src/PluginUtils/_ReportUtils.py: remove use of deprecated functions
	* src/plugins/DecendReport.py: remove use of deprecated functions
	* src/plugins/IndivComplete.py: remove use of deprecated functions
	* src/plugins/DetDescendantReport.py: remove use of deprecated functions
	* src/plugins/DetAncestralReport.py: remove use of deprecated functions
	* src/PluginUtils/_Plugins.py: remove statbox
	* src/SubstKeywords.py: remove use of deprecated functions
	* src/plugins/ various files: remove use of deprecated functions

2006-03-29  Don Allingham  <don@gramps-project.org>
	* src/Utils.py: provide launch function for spawning processes
	* src/DisplayTabs.py: fix import, move launch function
	* src/Editors/_EditPerson.py: Fix imports of EditMediaRef, remove
	specific edit image from top image window.
	* src/glade/gramps.glade: remove unused dialogs, replaced by 
	gtk.MessageDialog
	* src/AddMedia.py: clean up scale_image
	* src/Utils.py: replace fork() with spawn to prevent Xlib async errors
	* src/GrampsDisplay.py: replace fork() with spawn to prevent Xlib 
	async errors
	* src/QuestionDialog.py: Simply some dialogs by using gtk.MessageDialog
	* src/ImgManip.py: replace fork() with spawn to prevent Xlib async 
	errors
	* src/ViewManager.py: enable actiongroups if file loaded before
	the interface is initialized (command line or autoload)
	* src/SelectObject.py: Provide images in preview
	* src/DisplayTabs.py: Add support of SelectObject
	* src/GenericFilter.py: check for xml file before trying to parse
	* src/ListModel.py: image support in view

2006-03-28  Don Allingham  <don@gramps-project.org>